Revision history for ExtUtils-Builder-Compiler

{{$NEXT}}

0.004     2024-05-14 10:38:55+02:00 Europe/Brussels
          - Set default export value for Linker::PE::GCC
          - Correct loading ExtUtils::Builder::Action::Function in Linker

0.003     2024-05-06 11:37:41+02:00 Europe/Brussels
          - Add correct libperl for Cygwin and Windows
          - Fix linking loadable objects on Windows, cygwin, aix and vms

0.002     2024-04-27 11:56:02+02:00 Europe/Brussels
          - Fix linker flag passing for Mac
          - Skip executable test when libperl seems unavailable

0.001     2024-04-25 15:17:34+02:00 Europe/Brussels
    -